--- a/WPF/View/emps.xaml
+++ b/WPF/View/emps.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="403.292" Width="644.547">
+        Title="MainWindow" Height="512.792" Width="644.547">
 
     <Window.DataContext>
         <local:empsViewModel></local:empsViewModel>
@@ -23,11 +23,31 @@
             </DataGrid.Columns>
 
         </DataGrid>
-        <Button x:Name="Savebutton" Content="Сохранить" HorizontalAlignment="Left" Height="31" Margin="261,280,0,0" VerticalAlignment="Top" Width="101"/>
-        <Button x:Name="Editbutton" Content="Редактировать" HorizontalAlignment="Left" Height="31" Margin="516,280,0,0" VerticalAlignment="Top" Width="101"/>
-        <Button x:Name="Newbutton" Content="Создать" HorizontalAlignment="Left" Height="31" Margin="391,280,0,0" VerticalAlignment="Top" Width="101"/>
+        <Button x:Name="Savebutton" Content="Сохранить" HorizontalAlignment="Left" Height="31" Margin="270,442,0,0" VerticalAlignment="Top" Width="101" Command="{Binding SaveEmp}"/>
+        <Button x:Name="Editbutton" Content="Редактировать" HorizontalAlignment="Left" Height="31" Margin="525,442,0,0" VerticalAlignment="Top" Width="101"/>
+        <Button x:Name="Newbutton" Content="Создать" HorizontalAlignment="Left" Height="31" Margin="400,442,0,0" VerticalAlignment="Top" Width="101" Command="{Binding AddEmp}"/>
         <TextBox x:Name="SearchtextBox" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="265"/>
         <Button x:Name="Searchbutton" Content="Поиск" HorizontalAlignment="Left" Margin="287,36,0,0" VerticalAlignment="Top" Width="75"/>
+        <Border>
+            <Grid Margin="10,272,10,58" DataContext="{Binding ElementName=empGrid, Path=SelectedItem}">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <TextBlock Height="24" Grid.Column="0">Фамилия</TextBlock>
+                <TextBox Grid.Column="1" Text="{Binding Path=LastName}"></TextBox>
+                
+            </Grid>
+        </Border>
 
     </Grid>
 </Window>
