--- a/WPF/View/emps.xaml
+++ b/WPF/View/emps.xaml
@@ -19,13 +19,7 @@
         <TextBox x:Name="SearchtextBox" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="265"/>
         <Button x:Name="Searchbutton" Grid.Row="0" Content="Поиск" HorizontalAlignment="Left" Margin="287,36,0,0" VerticalAlignment="Top" Width="75"/>
 
-
-        <Grid Grid.Row="1" >
-            <Grid.RowDefinitions>
-                <RowDefinition  />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-        <DataGrid RowDetailsVisibilityMode="Visible" Grid.Row="0"  ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="empGrid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=Emps}" SelectionChanged="empGrid_SelectionChanged">
+        <DataGrid Grid.Row="1"  ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="empGrid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=Emps}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding LastName}" Header="Фамилия" Width="100" />
                     <DataGridTextColumn Binding="{Binding Name}" Header="Имя" Width="100" />
@@ -34,32 +28,38 @@
                     <DataGridTextColumn Binding="{Binding Dep.Name}" Header="Отдел" Width="100" />
                     <DataGridTextColumn Binding="{Binding InternalTel}" Header="Вн.тел." Width="*"/>
                 </DataGrid.Columns>
+            <DataGrid.RowDetailsTemplate>
+                <DataTemplate>
+                    <Border x:Name="EditForm" Height="150">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Height="24" Grid.Column="0">Фамилия</TextBlock>
+                            <TextBox Grid.Column="1" Text="{Binding Path=LastName, Mode=TwoWay}"></TextBox>
+                            <Button Grid.Column="2" x:Name="Savebutton"  Content="Сохранить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding SaveEmp}" Click="Savebutton_Click"/>
+                            <Button Grid.Column="3" x:Name="Editbutton"  Content="Редактировать" HorizontalAlignment="Left" Height="31" Width="102" Click="Editbutton_Click"/>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </DataGrid.RowDetailsTemplate>
             </DataGrid>
 
-            <Border Grid.Row="1" DockPanel.Dock="Bottom"   x:Name="EditForm" Height="150"  Visibility="Collapsed">
-                <Grid DataContext="{Binding ElementName=empGrid, Path=SelectedItem}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Height="24" Grid.Column="0">Фамилия</TextBlock>
-                    <TextBox Grid.Column="1" Text="{Binding Path=LastName}"></TextBox>
-                </Grid>
-            </Border>            
-        </Grid>
+          
+
 
         <StackPanel Orientation="Horizontal" Grid.Row="2">
-            <Button x:Name="Savebutton"  Content="Сохранить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding SaveEmp}" Click="Savebutton_Click"/>
-            <Button x:Name="Editbutton"  Content="Редактировать" HorizontalAlignment="Left" Height="31" Width="102" Click="Editbutton_Click"/>
+
             <Button x:Name="Newbutton" Content="Создать" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding AddEmp}" Click="Newbutton_Click"/>
         </StackPanel>
 
