--- a/WPF/View/emps.xaml
+++ b/WPF/View/emps.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions> 
         <TextBox x:Name="SearchtextBox" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="265"/>
-        <Button x:Name="Searchbutton" Grid.Row="0" Content="Поиск" HorizontalAlignment="Left" Margin="287,36,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="Searchbutton" Command="{Binding Search}" Grid.Row="0" Content="Поиск" HorizontalAlignment="Left" Margin="287,36,0,0" VerticalAlignment="Top" Width="75"/>
 
 
         <Grid Grid.Row="1" >
@@ -36,12 +36,14 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <Border Grid.Row="1" DockPanel.Dock="Bottom"   x:Name="EditForm" Height="150"  Visibility="Collapsed">
-                <Grid DataContext="{Binding ElementName=empGrid, Path=SelectedItem}">
+            <Border Grid.Row="1" DockPanel.Dock="Bottom"   x:Name="EditForm" Height="165"  Visibility="Collapsed">
+                <Grid Margin="5" DataContext="{Binding ElementName=empGrid, Path=SelectedItem}">
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto"></RowDefinition>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
@@ -50,9 +52,43 @@
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>                        
                     </Grid.ColumnDefinitions>
-                    <TextBlock Height="24" Grid.Column="0">Фамилия</TextBlock>
-                    <TextBox Grid.Column="1" Text="{Binding Path=LastName}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="0" Grid.Row="0">Фамилия</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding Path=LastName}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Margin="5" Grid.Column="0" Grid.Row="1">Имя</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="1"  Grid.Row="1" Text="{Binding Path=Name}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Margin="5" Grid.Column="0" Grid.Row="2">Отчеставо</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="1" Grid.Row="2" Text="{Binding Path=SName}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="2" Grid.Row="0">Domain Pass</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="3" Grid.Row="0" Text="{Binding Path=DomainPass}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="2" Grid.Row="1">Email</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="3" Grid.Row="1" Text="{Binding Path=Email}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="2" Grid.Row="2">Email Pass</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="3" Grid.Row="2" Text="{Binding Path=EmailPass}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="4" Grid.Row="0">ERoom Pass</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="5" Grid.Row="0" Text="{Binding Path=ERoomPass}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="4" Grid.Row="1">TCrypt Pass</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="5" Grid.Row="1" Text="{Binding Path=TrueCryptPass}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="4" Grid.Row="2">Mango</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="5" Grid.Row="2" Text="{Binding Path=Mango}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="6" Grid.Row="0">ICQ Name</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="7" Grid.Row="0" Text="{Binding Path=IcqName}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="6" Grid.Row="1">ICQ Pass</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="7" Grid.Row="1" Text="{Binding Path=IcqPass}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="6" Grid.Row="2">Gmail</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="7" Grid.Row="2" Text="{Binding Path=Gmail}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="8" Grid.Row="0">Skype Name</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="9" Grid.Row="0" Text="{Binding Path=SkypeName}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="8" Grid.Row="1">Skype Pass</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="9" Grid.Row="1" Text="{Binding Path=SkypeName}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="8" Grid.Row="2">Моб тел</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="9" Grid.Row="2" Text="{Binding Path=MobileTel }"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="0" Grid.Row="3">Комментарий</TextBlock>
+                    <TextBox Padding="2" Margin="5" Grid.Column="1" Grid.ColumnSpan="7" Grid.Row="3" Text="{Binding Path=Comments}"></TextBox>
+                    <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="0" Grid.Row="4">Скрыть в справочнике</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="4" IsChecked = "{Binding Path=HideInSpr}"></CheckBox>
                 </Grid>
             </Border>            
         </Grid>
