--- a/WPF/View/emps.xaml
+++ b/WPF/View/emps.xaml
@@ -16,8 +16,8 @@
             <RowDefinition />
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions> 
-        <TextBox x:Name="SearchtextBox" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="265"/>
-        <Button x:Name="Searchbutton" Command="{Binding Search}" Grid.Row="0" Content="Поиск" HorizontalAlignment="Left" Margin="287,36,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="SearchtextBox" Text="{Binding CurrentEmp.LastName}" Grid.Row="0" HorizontalAlignment="Left" Height="23" Margin="10,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="265"/>
+        <Button x:Name="Searchbutton" Command="{Binding Search}" Grid.Row="0" Content="Поиск" HorizontalAlignment="Left" Margin="287,36,0,0" VerticalAlignment="Top" Width="75" Click="Searchbutton_Click"/>
 
 
         <Grid Grid.Row="1" >
@@ -25,7 +25,7 @@
                 <RowDefinition  />
                 <RowDefinition />
             </Grid.RowDefinitions>
-        <DataGrid RowDetailsVisibilityMode="Visible" Grid.Row="0"  ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="empGrid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=Emps}" SelectionChanged="empGrid_SelectionChanged">
+        <DataGrid RowDetailsVisibilityMode="Visible" Grid.Row="0"  ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="empGrid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=Emps}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding LastName}" Header="Фамилия" Width="100" />
                     <DataGridTextColumn Binding="{Binding Name}" Header="Имя" Width="100" />
